# rustc-instrument

./: Cargo.toml  README.md
examples/print-hir-ast/: Cargo.toml
examples/print-hir-ast/src/: lib.rs
examples/rustc-ex/: Cargo.toml
examples/rustc-ex/src/: lib.rs
rustc-instrument/: Cargo.toml
rustc-instrument/src/: driver.rs
rustc-instrument/tests/: test_example.rs
rustc-instrument/tests/workspaces/basic/: Cargo.toml
rustc_plug_ast/: Cargo.toml  OLD_README.md
rustc_plug_ast/src/: lib.rs
rustc_plugin/: Cargo.toml  build.rs
rustc_plugin/src/: cli.rs  driver.rs  plugin.rs
rustc_plugin/tests/: test_example.rs
test-crate/: Cargo.toml  run.sh
test-crate/src/: main.rs  test_file.rs  test_file1.rs
