[package]
name = "rustc_plug_ast"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
# rustc_plugin = "0.10.0-nightly-2024-05-20"
rustc_plugin = { path = "../rustc_plugin" }
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[features]
test1 = []
test2 = []
