[package]
name = "rustc-ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
# rustc_plugin = "0.10.0-nightly-2024-05-20"
rustc-instrument = { path = "../../rustc-instrument" }
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
